--- a/src/blobdash/static/main.css
+++ b/src/blobdash/static/main.css
@@ -86,7 +86,6 @@
 
         --color-bg: #f4f4f5;
         --color-fg: #18181b;
-        --color-muted: #a1a1aa;
     }
 
     @media (prefers-color-scheme: dark) {
@@ -96,80 +95,140 @@
             --color-muted-1: #18181b;
             --color-muted-2: #27272a;
             --color-muted-3: #3f3f46;
+            --color-muted-4: #52525b;
         }
     }
 }
 
-@layer base {
-    body {
-        background-color: var(--color-bg);
-        color: var(--color-fg);
-        display: flex;
-        gap: 1em;
 
-        height: 100dvh;
+body {
+    background-color: var(--color-bg);
+    color: var(--color-fg);
+
+    height: 100dvh;
+
+    display: flex;
+    flex-direction: column;
+
+    @media (width >=650px) {
+        flex-direction: row;
     }
 
+    .blobcat {
+        color: var(--color-accent);
+        font-weight: bolder;
+    }
 
     a {
-        color: var(--color-accent);
+        color: inherit;
+        font-weight: bolder;
     }
 }
 
+#menu {
+    display: flex;
+    background-color: var(--color-muted-1);
 
-@layer sidebar {
-    #sidebar {
-		padding: 1rem;
-		border-right: 1px solid var(--color-muted-2);
-		background-color: var(--color-muted-1);
-		width: 25rem;
-		max-width: 33%;
-		display: flex;
-		flex-direction: column;
+    /* Menu is a horizontal, fixed height menubar on mobile  */
+    @media (width < 650px) {
+        height: 3rem;
+        padding: 0.25rem;
+    }
 
-        h1 {
-            display: flex;
-            gap: 0.25em;
-            justify-content: center;
-            font-size: 3rem;
-            margin-block-end: auto;
+    /* Menu is a vertical, fixed width sidebar on desktop */
+    @media (width >=650px) {
+        flex-direction: column;
+        width: 15rem;
+        padding: 0.5rem;
+    }
+
+    * {
+        /*  Setting `line-height` to `1` will mean that the actual height of the element is the same
+            as its `font-size`. Since the menu is UI, not body text, this makes more sense, and it
+            allows us to set precise heights for one-line text elements using `font-size`.
+         */
+        line-height: 1;
+    }
+
+    h1 {
+        display: flex;
+        justify-content: center;
+        gap: 0.25rem;
+
+        img {
+            height: 2.5rem;
         }
 
-        @media (max-width: 800px) {
-            #title {
+        span {
+            font-size: 2.5rem;
+
+            @media (width < 650px) {
+                /* Mobile doesn't have space for the title, so we just show the logo. */
                 display: none;
             }
-        }
 
-        #logo {
-            vertical-align: text-bottom;
-            height: 1lh;
-            /* display: inline; */
-        }
-
-        #title {
-            color: var(--color-accent);
-            font-weight: bolder;
-        }
-
-        #user {
-            display: grid;
-            grid-template-columns: auto 1fr;
-            column-gap: 0.5rem;
-            background-color: var(--color-muted-2);
-            border: 1px solid var(--color-muted-3);
-            border-radius: var(--radius);
-            padding: 1rem;
-            
-            h2 {
-                font-size: 1rem;
-            }
-
-            #usericon {
-                grid-row: span 2;
-                height: 100%;
-                width: 2.5rem;
-            }
         }
     }
+
+    .user {
+        @media (width < 650px) {
+            /* Icon before name */
+            flex-direction: row;
+        }
+
+        @media (width >=650px) {
+            /* Fill width of sidebar */
+            width: 100%;
+
+            /* Name before icon */
+            flex-direction: row-reverse;
+            justify-content: start;
+        }
+
+        height: 2.5rem;
+        padding: 0.5rem 0.75rem;
+        display: flex;
+        gap: 0.5rem;
+        
+        background-color: var(--color-muted-2);
+        border: solid 1px var(--color-muted-3);
+        border-radius: var(--radius);
+        
+        align-self: center;
+        margin-inline-start: auto;
+        margin-block-start: auto;
+        
+        
+        svg {
+            height: 1.5rem;
+            align-self: center;
+        }
+
+        span {
+            font-size: 1rem;
+            align-self: center;
+            font-weight: 600;
+        }
+
+
+    }
+
+    .about {
+        margin: 0.75rem 0.25rem 0.25rem;
+        display: flex;
+        justify-content: space-between;
+        font-size: 0.65rem;
+        color: var(--color-muted-4);
+
+        a {
+            text-decoration: underline solid 2px var(--color-muted-3);
+        }
+
+        @media (width < 650px) {
+            /* Don't display on mobile, not enough space */
+            /* TODO: Add to dropdown on mobile */
+            display: none;
+        }
+    }
+
 }
