--- a/src/blobdash/templates/index.html
+++ b/src/blobdash/templates/index.html
@@ -35,9 +35,26 @@
         </div>
     </div>
     <main>
-        <p>
-            main content
-        </p>
+        <section>
+            <img src="https://logos.blobc.at/ruflix.png">
+            <h3>ruflix</h3>
+            <p>watch movies and tv</p>
+        </section>
+        <section>
+            <img src="https://logos.blobc.at/ruflix.png">
+            <h3>ruflix</h3>
+            <p>watch movies and tv</p>
+        </section>
+        <section>
+            <img src="https://logos.blobc.at/ruflix.png">
+            <h3>ruflix</h3>
+            <p>watch movies and tv</p>
+        </section>
+        <section>
+            <img src="https://logos.blobc.at/ruflix.png">
+            <h3>ruflix</h3>
+            <p>watch movies and tv</p>
+        </section>
     </main>
 </body>
 
