Minor styling fixes for app links

--- a/src/blobdash/static/main.css
+++ b/src/blobdash/static/main.css
@@ -258,6 +258,7 @@ main {
             /6.875rem   auto;
 
         height: 10rem;
+        min-width: fit-content;
         width: 25rem;
         max-width: 100%;
 
@@ -281,6 +282,7 @@ main {
                 @media (width >= 650px) {
                     content: ".blobc.at";
                     font-size: 1.5rem;
+                    line-height: 1;
                     color: var(--color-muted-3)
                 }
             }
