Use --radius to set iframe border radius

--- a/src/blobdash/static/main.css
+++ b/src/blobdash/static/main.css
@@ -191,6 +191,10 @@ body {
                 font-weight: 500;
                 margin-inline-start: 0.5rem;
             }
+
+            iframe {
+                border-radius: var(--radius);
+            }
         }
     }
 
