--- a/src/blobdash/static/main.css
+++ b/src/blobdash/static/main.css
@@ -264,8 +264,13 @@ body {
         margin: 0.75rem 0.25rem 0.25rem;
         display: flex;
         justify-content: space-between;
-        font-size: 0.65rem;
+        font-size: 1.2rem;
         color: var(--color-muted-4);
+
+        a {
+            text-decoration: underline solid 0.1em;
+            color: var(--color-accent)
+        }
 
         @media (width < 650px) {
             /* Don't display on mobile, not enough space */
@@ -274,6 +279,73 @@ body {
         }
     }
 
+}
+
+dialog {
+    margin: auto;
+    width: 80%;
+    height: 80%;
+    padding: 1rem;
+
+    background-color: var(--color-bg);
+    color: var(--color-fg);
+
+    border: 2px solid var(--color-muted-1);
+    border-radius: var(--radius);
+
+    box-shadow: 0 0 5rem 1rem rgb(from var(--color-accent) r g b / 5%);
+
+    &::backdrop {
+        background-color: var(--color-bg);
+        opacity: 50%;
+    }
+
+    h1 {
+        display: flex;
+        gap: 0.25rem;
+        
+        img {
+            height: 5rem;
+        }
+        
+        span {
+            color: var(--color-accent);
+            font-weight: bolder;
+            font-size: 5rem;
+            line-height: 1;
+        }
+    }
+
+    .close {
+        position: absolute;
+        right: 1rem;
+        top: 1rem;
+        background-color: inherit;
+        color: var(--color-bg);
+        background-color: var(--color-accent);
+        border: 1px solid var(--color-muted-1);
+        border-radius: var(--radius);
+        padding: 1.25rem;
+        font-size: 2.5rem;
+        font-weight: 900;
+        cursor: pointer;
+    }
+
+    #about-content {
+        padding: 1rem 0.5rem;
+        width: 50rem;
+        max-width: 100%;
+        font-size: 1.25em;
+        overflow: scroll;
+
+        p {
+        }
+
+        * {
+            line-height: 1.5;
+            margin-block-end: 1rem;
+        }
+    }
 }
 
 main {
