--- a/src/blobdash/static/main.css
+++ b/src/blobdash/static/main.css
@@ -137,7 +137,7 @@ body {
         flex-direction: column;
         width: 15rem;
         min-width: fit-content;
-        padding: 0.5rem;
+        padding: 1.5rem 0.5rem 0.5rem;
     }
 
     * {
