--- a/src/blobdash/static/main.css
+++ b/src/blobdash/static/main.css
@@ -433,7 +433,7 @@ main {
                 max-width: 3rem;
             }
             @media (width >= 400px) {
-                height: 100%;
+                /* height: 100%; */
                 align-self: center;
             }
         }
