--- a/src/blobdash/templates/index.html.jinja
+++ b/src/blobdash/templates/index.html.jinja
@@ -37,7 +37,7 @@
                     <section>
                         <h3>{{ widget }}</h3>
                         <iframe
-                            src="{{ settings.dashdot.host }}?graph={{ widget }}&color={{ settings.accent_color.as_hex() | trim('#') }}&showPercentage={{ settings.dashdot.show_values | string | lower }}"
+                            src="{{ settings.dashdot.host }}?graph={{ widget }}&color={{ settings.accent_color.as_hex() | trim('#') }}&showPercentage={{ settings.dashdot.show_values | string | lower }}{% if widget == 'storage' and settings.dashdot.split_view %}&multiView=true{% endif %}"
                             allowtransparency="true"
                             frameborder="0">
                         </iframe>
